# course_db_hhApi

./: .gitignore  README.md  config.py  create_database.py  create_tables.py  main.py  pyproject.toml  requirements.txt  test_connection.py  test_hh_api.py
src/api/: hh_api.py
src/database/: db_manager.py
